Small change of main pic

--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
@@ -15,7 +15,7 @@
    <h1>About This Website</h1>
 </section>
 
-<img src="{% static "assignment2_app/img/main.jpg" %}" alt="Main" class="image">
+<img src="{% static "../static/assignment_4_app/img/main.jpg" %}" alt="Main" class="image">
 
 <section class="des">
     <p><strong>     Welcome to the Team 11 Page, your central resource for exploring cutting-edge research initiatives and thesis projects across various disciplines. Our platform bridges ambitious students and distinguished faculty, facilitating access to a wide range of academic investigations and scholarly pursuits.</strong></p>
