--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -13,7 +13,7 @@
     <header class="header">
         <a class="link" href="{% url 'home' %}">
             <div class="header__logo">
-                <img class="header__img" src="{% static "img/hit237_group11_logo.png" %}" alt="Group 11 Logo">
+                <img class="header__img" src="{% static "img/CDU_logo.png" %}" alt="Group 11 Logo">
                 <div>GROUP 11</div>
             </div>
         </a>
