Added changes to base.html

--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -35,7 +35,14 @@
 
 
     <footer class="footer">
-        <div>This is the footer: May contain links in the future project</div>
+        <div class="footer">
+          <h1>UNIVERSITY</h1>  
+          <ul>
+            <li>Address:</li>
+            <li>Phone:</li>
+            <li>Email</li>
+          </ul>
+        </div>
     </footer>
 </body>
 </html>
