Added changes to base.html

--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -35,8 +35,8 @@
 
 
     <footer class="footer">
-        <div class="footer">
-          <h1>UNIVERSITY</h1>  
+        <div>
+          <h2>UNIVERSITY</h2>  
           <ul>
             <li>Address:</li>
             <li>Phone:</li>
