--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
@@ -4,7 +4,7 @@
 {% block title %} {{ project.title}} {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "assignment2_app/projectDetails.css"%}">
+    <link rel="stylesheet" href="{% static "assignment_4_app/projectDetails.css"%}">
 {% endblock %}
 
 
@@ -18,7 +18,7 @@
             <p><strong>Topic Number:</strong> {{ project.topic_num }}</p>
             <p><strong>Thesis Supervisor:</strong> {{ project.supervisor }}</p>
             <p><strong>Locations:</strong> {{ project.location }}</p>
-            <p><strong>Fields:</strong> {{ project.fields }}</p>
+            <p><strong>Fields:</strong> {{ project.research_areas }}</p>
             <p><strong>Description: </strong>  {{ project.description|linebreaks }}</p>
         </div>
     </div>
