--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectDetails.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectDetails.css
@@ -5,6 +5,12 @@
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transform: scale(0.95);
+}
+
+.container * {
+    transform: scale(0.95);
+
 }
 .container__heading {
     font-size: 6rem;
