--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
@@ -5,6 +5,11 @@
     padding: 20px;
     background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transform: scale(0.9);
+}
+.container * {
+    transform: scale(0.95);
+
 }
 
 .research-topics-title {
