add search functionality

--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
@@ -5,7 +5,7 @@
 
 {% block css_files %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "assignment2_app/index.css"%}">
+    <link rel="stylesheet" href="{% static "assignment_4_app/index.css"%}">
 {% endblock %}
 
 
@@ -23,4 +23,8 @@
     <p><strong>     Please explore our site for detailed project listings, in-depth analysis, and direct links to project supervisors and research groups. We aim to foster an environment of academic excellence and innovation, empowering students and researchers to contribute significantly to their fields.</strong></p>
     <p><strong>     Begin your journey by navigating to our Project List to view available research topics or visit our About page to learn more about our dedicated team and academic mission.</strong></p>
 </section>
+
+<form action="" method="POST">
+
+</form>
 {% endblock content %}
