--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectList.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectList.html
@@ -9,10 +9,20 @@
 {% endblock %}
 
 {% block content %}
+<div class="search-container">
+    <form action="{% url "search" %}" method="POST">
+        {% csrf_token %}
+        <input type="search" placeholder="Search thesis" name="searched">
+        <button type="submit">Search</button>
+    </form>
+</div>
+
 <div class="container">
     <h1 class="research-topics-title">Research Topics</h1>
     {% for project in projects %}
         {% include "assignment_4_app/includes/project.html" %}
     {% endfor %}
 </div>
+
+
 {% endblock content %}
