--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
@@ -15,6 +15,14 @@
    <h1>About This Website</h1>
 </section>
 
+<div class="search-container">
+    <form action="{% url "search" %}" method="POST">
+        {% csrf_token %}
+        <input type="search" placeholder="Search thesis" name="searched">
+        <button type="submit">Search</button>
+    </form>
+</div>
+
 <img src="{% static "../static/assignment_4_app/img/main.jpg" %}" alt="Main" class="image">
 
 <section class="des">
