--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %} {{ project.title}} {% endblock %}
+{% block title %} {{ project.title }} {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "assignment_4_app/projectDetails.css"%}">
+    <link rel="stylesheet" href="{% static "assignment_4_app/projectDetails.css" %}">
 {% endblock %}
-
 
 {% block content %}
 <section class="section">
@@ -19,8 +18,12 @@
             <p><strong>Thesis Supervisor:</strong> {{ project.supervisor }}</p>
             <p><strong>Locations:</strong> {{ project.location }}</p>
             <p><strong>Fields:</strong> {{ project.research_areas }}</p>
-            <p><strong>Description: </strong>  {{ project.description|linebreaks }}</p>
+            <p><strong>Description: </strong> {{ project.description|linebreaks }}</p>
         </div>
     </div>
+</section>
+
+<section class="section">
+    <a class="link" href="{% url 'update-project' project.topic_num %}"> Update </a>
 </section>
 {% endblock content %}
