add delete functionality to website

--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
@@ -25,5 +25,6 @@
 
 <section class="section">
     <a class="link" href="{% url 'update-project' project.topic_num %}"> Update </a>
+    <a class="link" href="{% url 'delete-project' project.topic_num %}"> Delete thesis </a>
 </section>
 {% endblock content %}
