--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -19,9 +19,9 @@
         </a>
         <nav class="navigation">
             <ul class="navigation__list">
-                <li class="navigation__item"><a class="link" href="{% url 'home' %}">Home</a></li>
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
-                <li class="navigation__item"><a class="link" href="{% url 'about' %}">About us</a></li>
+                <li class="navigation__item"><a class="link" href="#">Apply now</a></li>
+                <li class="navigation__item"><a class="link" href="#">Login</a></li>
             </ul>
         </nav>
     </header>
@@ -41,6 +41,7 @@
             <li>Address:</li>
             <li>Phone:</li>
             <li>Email</li>
+            <li class="navigation__item"><a class="link" href="{% url 'about' %}">About us</a></li>
           </ul>
         </div>
     </footer>
