--- a/assignment_4_proj/management/templates/management/management_index.html
+++ b/assignment_4_proj/management/templates/management/management_index.html
@@ -11,7 +11,7 @@
 {% block content %}
 
 <section class="title">
-   <h1>About This Website</h1>
+   <h1>Management and Administration</h1>
 </section>
 
 <section class="section--thesis-management">
@@ -23,14 +23,17 @@
 
 <section class="section--pending">
     {% comment %} forms for student application pending approval {% endcomment %}
+    Section Pending
 </section>
 
 <section class="section--user-management">
     {% comment %} display a list of all users {% endcomment %}
+    User management
 </section>
 
 <section class="section--student-management">
     {% comment %} list all students {% endcomment %}
+    Student management
 </section>
 
 {% endblock content %}
