--- a/assignment_4_proj/management/templates/management/management_project.html
+++ b/assignment_4_proj/management/templates/management/management_project.html
@@ -1,5 +1,45 @@
 
+{% extends "management/management_base.html" %}
+{% load static %}
+
+{% block title %} Management {% endblock %}
+
+{% block css_files %}
+    <link rel="stylesheet" href="{% static "management_project.css"%}">
+{% endblock %}
+
+{% block content %}
+
+<a href="{% url "project-csv" %}">Download all thesis topics</a>
+<section class="add">
+    <h1>Adding Thesis</h1>
+    <a href="{% url "add-project" %}">Add a thesis</a>
+</section>
+
+<section class="theses">
+    <h1 class="container__heading">Research Topic</h1>
+
+    {% for project in projects %}
+    <section class="section">
+        <div class="container">
+            <div class="project">
+                <h2 class="project__heading">{{ project.title }}</h2>
+                <p><strong>Category:</strong> {{ project.category }}</p>
+                <p><strong>Topic Number:</strong> {{ project.topic_num }}</p>
+                <p><strong>Thesis Supervisor:</strong> {{ project.supervisor }}</p>
+                <p><strong>Locations:</strong> {{ project.location }}</p>
+                <p><strong>Fields:</strong> {{ project.research_areas }}</p>
+                <p><strong>Description: </strong> {{ project.description|linebreaks }}</p>
+            </div>
+        </div>
+    </section>
+    <section class="section">
+        <a class="link" href="{% url 'update-project' project.topic_num %}"> Update </a>
+        <a class="link" href="{% url 'delete-project' project.topic_num %}"> Delete thesis </a>
+    </section>
+{% endfor %}
+</section>
+
+{% endblock content %}
 
 
-{% comment %} <a class="link" href="{% url 'update-project' project.topic_num %}"> Update </a>
-<a class="link" href="{% url 'delete-project' project.topic_num %}"> Delete thesis </a> {% endcomment %}
