--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -21,11 +21,10 @@
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
                 <li class="navigation__item"><a class="link" href="#">Apply now</a></li>
-                <li class="navigation__item"><a class="link" href="#">Login</a></li>
+                <li class="navigation__item"><a class="link" href="{% url "account-login" %}">Login</a></li>
             </ul>
         </nav>
     </header>
-
 
     <main class="main">
         {% block content %} 
