--- a/assignment_4_proj/accounts/templates/accounts/accounts_login.html
+++ b/assignment_4_proj/accounts/templates/accounts/accounts_login.html
@@ -7,8 +7,8 @@
     <form action="" method="POST">
         {% csrf_token %}
         <div>
-            <label for="username">username</label>
-            <input type="text" name="username">
+            <label for="login_value">Username or Email</label>
+            <input type="text" name="login_value">
         </div>
         <div>
             <label for="password">Password</label>
