--- a/assignment_4_proj/management/templates/management/management_base.html
+++ b/assignment_4_proj/management/templates/management/management_base.html
@@ -21,7 +21,7 @@
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
                 <li class="navigation__item"><a class="link" href="#"></a></li>
-                <li class="navigation__item"><a class="link" href="#">Logout</a></li>
+                <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
             </ul>
         </nav>
     </header>
