--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -21,7 +21,11 @@
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
                 <li class="navigation__item"><a class="link" href="#">Apply now</a></li>
-                <li class="navigation__item"><a class="link" href="{% url "account-login" %}">Login</a></li>
+                {% if user.is_authenticated %}
+                    <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
+                {% else %}
+                    <li class="navigation__item"><a class="link" href="{% url "account-login" %}">Login</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
