--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/app.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/app.css
@@ -73,18 +73,18 @@ body {
     padding: 28rem 14rem 53rem 14rem;
 }
 
-.footer {
+/* .footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 35rem;
+    height: 55rem;
     background-color: var(--color-primary);
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
     font-size: 3rem;
-}
+} */
 
 .link {
     text-decoration: none;   
@@ -110,4 +110,62 @@ body {
 
 .header__logo div {
     font-weight: bold;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.social-links a img {
+    width: 40px;
+    height: 40px;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.footer .first .container li {
+    font-size: 20px;
+}
+
+.footer .first .container h3 {
+    font-size: 25px;
+}
+
+.footer {
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+    font-size: 30px;
+    padding: 30px;
+}
+
+.footer .first {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    margin: 20px;
+    padding: 20px;
+}
+
+.accredition {
+    text-align: center;
+}
+
+.first,
+.social-links,
+.accredition {
+    margin: 30px;
+}
+
+.container li {
+    list-style-type: none;
+    margin: 10px 0px;
+}
+
+.accredition {
+    font-size: 20px;
 }
