--- a/assignment_4_proj/management/templates/management/addProject.html
+++ b/assignment_4_proj/management/templates/management/addProject.html
@@ -13,16 +13,16 @@
     <h1 class="research-topics-title">Manage Theses</h1>
     {% if submitted  %}
         <p>Project Submitted Successfully!</p>
-
-        <a href="{% url "add-project" %}">add another thesis</a>
         <a href="{% url "manage-project" %}">return to manage project</a>
+        <a href="{% url "add-project" %}">add another thesis</a>
+        
     {% else %}
         <form action="" method="POST">
             {% csrf_token %}
 
             {{ form.as_p }}
 
-            <input type="submit" vsalue="submit" class="btn btn-submit">
+            <input type="submit" value="submit" class="btn btn-submit">
         </form>
 
         <a href="{% url "manage-project" %}">return to manage project</a>
