--- a/assignment_4_proj/management/templates/management/management_project.html
+++ b/assignment_4_proj/management/templates/management/management_project.html
@@ -26,7 +26,7 @@
                 <h2 class="project__heading">{{ project.title }}</h2>
                 <p><strong>Category:</strong> {{ project.category }}</p>
                 <p><strong>Topic Number:</strong> {{ project.topic_num }}</p>
-                <p><strong>Thesis Supervisor:</strong> {{ project.supervisor }}</p>
+                <p><strong>Thesis Supervisor:</strong> {{ project.supervisor.first_name }} {{ project.supervisor.last_name }}</p>
                 <p><strong>Locations:</strong> {{ project.location }}</p>
                 <p><strong>Fields:</strong> {{ project.research_areas }}</p>
                 <p><strong>Description: </strong> {{ project.description|linebreaks }}</p>
