--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectDetails.html
@@ -13,7 +13,12 @@
         <h1 class="container__heading">Research Topic</h1>
         <div class="project">
             <h2 class="project__heading">{{ project.title }}</h2>
-            <p><strong>Category:</strong> {{ project.category }}</p>
+            <p><strong>Category:</strong>
+                {% for category in project.category.all %}
+                    {{ category.name }}
+                    {% if not forloop.last %}, {% endif %}
+                {% endfor %}
+            </p>
             <p><strong>Topic Number:</strong> {{ project.topic_num }}</p>
             <p><strong>Thesis Supervisor:</strong> {{ project.supervisor }}</p>
             <p><strong>Locations:</strong> {{ project.location }}</p>
