--- a/assignment_4_proj/management/templates/management/management_project.html
+++ b/assignment_4_proj/management/templates/management/management_project.html
@@ -24,7 +24,12 @@
         <div class="container">
             <div class="project">
                 <h2 class="project__heading">{{ project.title }}</h2>
-                <p><strong>Category:</strong> {{ project.category }}</p>
+                <p><strong>Category:</strong>
+                    {% for category in project.category.all %}
+                        {{ category.name }}
+                        {% if not forloop.last %}, {% endif %}
+                    {% endfor %}
+                </p>
                 <p><strong>Topic Number:</strong> {{ project.topic_num }}</p>
                 <p><strong>Thesis Supervisor:</strong> {{ project.supervisor.first_name }} {{ project.supervisor.last_name }}</p>
                 <p><strong>Locations:</strong> {{ project.location }}</p>
