--- a/assignment_4_proj/accounts/templates/accounts/accounts_login.html
+++ b/assignment_4_proj/accounts/templates/accounts/accounts_login.html
@@ -7,16 +7,27 @@
 {% endblock %}
 
 {% block content %}
-    <form action="" method="POST">
-        {% csrf_token %}
-        <div>
-            <label for="login_value">Username or Email</label>
-            <input type="text" name="login_value">
+    <div class="main">
+        <div class="main2">
+            <img src="{% static "img/blob.png" %}" alt="CDU Logo">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <h1>Login</h1>
+                <br>
+                <div class="inputs">
+                    <div>
+                        <label for="login_value">Username or Email:</label><br>
+                        <input type="text" name="login_value" class="login">
+                    </div>
+                    <br>
+                    <div>
+                        <label for="password">Password:</label><br>
+                        <input type="password" name="password" class="pass">
+                    </div>
+                </div>
+                <br>
+                <input type="submit" class="submit">
+            </form>
         </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" name="password">
-        </div>
-        <input type="submit">
-    </form>
+    </div>
 {% endblock content %}
