--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -72,7 +72,7 @@
             <a href="#"><img src="../static/assignment_4_app/img/linkedin-white-logo.webp" alt="Linkedin icon"></a>
         </div>
         <div class="accredition">
-            <p>&copy; GROUP 11</p>
+            <strong><p>&copy; GROUP 11</p></strong>
         </div>
     </footer>
 </body>
