add more authentication for management app

--- a/assignment_4_proj/management/templates/management/management_base.html
+++ b/assignment_4_proj/management/templates/management/management_base.html
@@ -20,8 +20,13 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
-                <li class="navigation__item"><a class="link" href="#"></a></li>
-                <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
+                {% if user.is_authenticated %}
+                    {% if user.user_type == "supervisor" or user.user_type == "unit_coordinator" %}
+                        <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
+                    {% endif %}
+                {% else %}
+                <li class="navigation__item"><a class="link" href="{% url "account-login" %}">Login</a></li>
+                {% endif %}
             </ul>
         </nav>
     </header>
