--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -20,12 +20,20 @@
         <nav class="navigation">
             <ul class="navigation__list">
                 <li class="navigation__item"><a class="link" href="{% url 'project-list' %}">Projects</a></li>
-                <li class="navigation__item"><a class="link" href="#">Apply now</a></li>
+                <li class="navigation__item"><a class="link" href="#">Apply</a></li>
+                {% if user.is_authenticated %}
+                    {% if user.user_type == "supervisor" or user.user_type == "unit_coordinator" %}
+                        <li class="navigation__item">
+                            <a class="link" href="{% url "management-index" %}">Management</a>
+                        </li>
+                    {% endif %}
+                {% endif %}
                 {% if user.is_authenticated %}
                     <li class="navigation__item"><a class="link" href="{% url "account-logout" %}">Logout</a></li>
                 {% else %}
                     <li class="navigation__item"><a class="link" href="{% url "account-login" %}">Login</a></li>
                 {% endif %}
+
             </ul>
         </nav>
     </header>
