--- a/assignment_4_proj/management/templates/management/management_base.html
+++ b/assignment_4_proj/management/templates/management/management_base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "management_base.css"%}">
+    <link rel="stylesheet" href="{% static "management/management_base.css"%}">
     <title>{% block title %}{% endblock %}</title>
     {% block css_files %}{% endblock %}
 </head>
