--- a/assignment_4_proj/management/templates/management/updateProject.html
+++ b/assignment_4_proj/management/templates/management/updateProject.html
@@ -5,7 +5,7 @@
 {% block title %} Update Project Theses {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static "assignment_4_app/updateProject.css"%}">
+    <link rel="stylesheet" href="{% static "management/management_updateProject.css"%}">
 {% endblock %}
 
 {% block content %}
@@ -13,7 +13,7 @@
     {% if user.user_type == "unit_coordinator" or user == project.supervisor %}
         <div class="container">
             <h1>Update</h1>
-            <form action="" method="POST">
+            <form class="form" action="" method="POST">
                 {% csrf_token %}
                 {{ form.as_p }}
         
