--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/projectList.css
@@ -3,7 +3,7 @@
     /* width: 96%; */
     margin: auto;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: black;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transform: scale(0.9);
 }
