--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/index.html
@@ -14,14 +14,16 @@
 <section class="title">
    <h1>About This Website</h1>
 </section>
+<br><br>
 
 <div class="search-container">
     <form action="{% url "search" %}" method="POST">
         {% csrf_token %}
-        <input type="search" placeholder="Search thesis" name="searched">
-        <button type="submit">Search</button>
+        <input type="search" placeholder="Search thesis" name="searched" class="search-bar">
+        <button type="submit" class="search-button">Search</button>
     </form>
 </div>
+<br><br>
 
 <img src="{% static "../static/assignment_4_app/img/main.jpg" %}" alt="Main" class="image">
 
