--- a/assignment_4_proj/assignment_4_app/static/assignment_4_app/app.css
+++ b/assignment_4_proj/assignment_4_app/static/assignment_4_app/app.css
@@ -1,8 +1,8 @@
 :root {
     --color-primary: #3C558B;
     --color-secondary: white;
-    --color-dark-blue: #4d5c76;
-    --color-grey: #e7e7e7;
+    --color-dark-blue: #1c0e45;
+    --color-grey: #eff0f8;
     --color-text-dark: #182620;
 }
 
@@ -21,15 +21,19 @@ html {
 }
 body {
     box-sizing: border-box;
-    /* background-color: var(--color-primary); */
     position: relative;
     background-color: white;
+}
+
+.footer,
+.header {
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
 }
 
 .header {
     width: 100%;
     padding: 2rem 18rem;
-    background-color: var(--color-primary);
     display: flex;
     justify-content: space-between;
     font-size: 2.7rem;
@@ -37,7 +41,6 @@ body {
     top: 0;
 }
 .header__logo {
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,9 +61,7 @@ body {
     gap: 2rem;
     list-style-type: none;
 }
-.navigation__item a {
-    color: white;
-}
+
 .navigation__item {
     transition: all .3s;
 
@@ -71,6 +72,7 @@ body {
 
 .main {
     padding: 28rem 14rem 53rem 14rem;
+    background-color: var(--color-grey);
 }
 
 .link {
@@ -81,7 +83,7 @@ body {
 }
 
 .image {
-    width: 100%;
+    width: 75%;
 }
 
 .title {
@@ -101,7 +103,6 @@ body {
 
 a {
     text-decoration: none;
-    color: white;
 }
 
 .social-links a img {
@@ -115,17 +116,15 @@ a {
     gap: 20px;
 }
 
-.footer .first .container li {
+.footer .first .footer-container li {
     font-size: 20px;
 }
 
-.footer .first .container h3 {
+.footer .first .footer-container h3 {
     font-size: 25px;
 }
 
 .footer {
-    background-color: var(--color-primary);
-    color: var(--color-secondary);
     font-size: 30px;
     padding: 30px;
 }
@@ -148,7 +147,7 @@ a {
     margin: 30px;
 }
 
-.container li {
+.footer-container li {
     list-style-type: none;
     margin: 10px 0px;
 }
@@ -161,4 +160,11 @@ a {
     text-align: center;
     font-size: 2rem;
     padding-bottom: 30px;
+}
+
+.group-11,
+.navigation__item a,
+.link,
+.footer-container a {
+    color: var(--color-primary);
 }
