--- a/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectList.html
+++ b/assignment_4_proj/assignment_4_app/templates/assignment_4_app/projectList.html
@@ -12,8 +12,8 @@
 <div class="search-container">
     <form action="{% url "search" %}" method="POST">
         {% csrf_token %}
-        <input type="search" placeholder="Search thesis" name="searched">
-        <button type="submit">Search</button>
+        <input type="search" placeholder="Search thesis" name="searched" class="search-bar">
+        <button type="submit" class="search-button"><img src="{% static "assignment_4_app/img/search-icon.png" %}" alt="Search icon"></button>
     </form>
 </div>
 
