--- a/assignment_4_proj/templates/base.html
+++ b/assignment_4_proj/templates/base.html
@@ -13,8 +13,8 @@
     <header class="header">
         <a class="link" href="{% url 'home' %}">
             <div class="header__logo">
-                <img class="header__img" src="{% static "img/CDU-logo2.png" %}" alt="Group 11 Logo">
-                <div>GROUP 11</div>
+                <img class="header__img" src="{% static "img/cdu-logo.png" %}" alt="Group 11 Logo">
+                <div class="group-11">GROUP 11</div>
             </div>
         </a>
         <nav class="navigation">
@@ -47,7 +47,7 @@
 
     <footer class="footer">
         <div class="first">
-            <div class="container">
+            <div class="footer-container">
                 <h2>UNIVERSITY</h2>
                 <br>
                 <ul>
@@ -56,7 +56,7 @@
                     <li><strong>Email:</strong> info@university.edu</li>
                 </ul>
             </div>
-            <div class="container">
+            <div class="footer-container">
                 <h3>LEGAL AND COMPLIANCE</h3>
                 <ul>
                     <li><a href="#"><strong>Privacy Policy</strong></a></li>
@@ -65,7 +65,7 @@
                     <li><a href="#"><strong>Non-Discrimination Policy</strong></a></li>
                 </ul>
             </div>
-            <div class="container">
+            <div class="footer-container">
                 <h3>QUICK LINKS</h3>
                 <li><a href="#"><strong>Admissions</strong></a></li>
                 <li><a href="#"><strong>Academics</strong></a></li>
